# The_Finite_Memory_Law

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
code/: README  wz_demo
docs/: README
fml/: __init__.py  cli.py  sim.py
media/: README
tests/: test_sim.py
